refactor(Drink): adicionado status nos retornos dos endpoints